# scope-guard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  vercel.json
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/scope_guard/: __init__.py  asp.py  asp_models.py  audit.py  codex.py  command_parser.py  config.py  engine.py  inventory.py  main.py  models.py  planner.py  policy.py  smoke.py
apps/api/tests/: test_asp.py  test_codex_adapter.py  test_hosted_runner.py  test_models_planner.py  test_policy.py  test_signature_flow.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: control-plane.test.tsx  control-plane.tsx
apps/web/e2e/: submission.spec.ts
demo/: docker-compose.demo.yml
demo/configs/: engageflow.baseline.json  inventory.json  rdsocial.baseline.json
demo/scripts/: Dockerfile  Dockerfile.init  runner.py
docs/: ARCHITECTURE.md  CODEX_COLLABORATION.md  DEMO_SCRIPT.md  DEPENDENCY_SECURITY_REVIEW.md  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  EVALUATION.md  FINAL_GAP_ANALYSIS.md  FINAL_READINESS.md  LIVE_PROVIDER_VERIFICATION.md  LOCAL_END_TO_END_VERIFICATION.md  OKX_ASP.md  PRODUCT_DECISIONS.md  SUBMISSION_EVIDENCE.md  THREAT_MODEL.md  VIDEO_RECORDING_CHECKLIST.md  WSL_STABILITY.md
evaluations/sentrybench/: run.py
scripts/: verify-clean-clone.sh  verify-hosted-demo.sh
(+15 files in other folders)
