[project]
name = "scope-guard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.116,<1", "uvicorn[standard]>=0.35,<1", "pydantic-settings>=2.10,<3", "sqlalchemy>=2.0,<3", "aiosqlite>=0.21,<1", "httpx>=0.28,<1", "openai>=1.90,<2"]

[dependency-groups]
dev = ["pytest>=8.4,<9", "pytest-asyncio>=1.0,<2", "ruff>=0.12,<1", "mypy>=1.16,<2"]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["apps/api/scope_guard"]
